--- a/shopping car back/package.json
+++ b/shopping car back/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install-modules": "npm install"
+    "install-modules": "npm install",
+    "swagger": "node ./swagger.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,8 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.5.1",
     "nodemailer": "^6.9.4",
-    "redis": "^4.6.7"
+    "redis": "^4.6.7",
+    "swagger-autogen": "^2.23.6",
+    "swagger-ui-express": "^5.0.0"
   }
 }
